Enhance test classes with mock server setup; improve null handling in ValitiveMonitoringSetSubjectResponse and update package.xml for new test classes

--- a/force-app/main/default/classes/Test_AddContactToValitiveMonitioringSet.cls
+++ b/force-app/main/default/classes/Test_AddContactToValitiveMonitioringSet.cls
@@ -14,7 +14,8 @@ private class Test_AddContactToValitiveMonitioringSet {
         contact.Personal_Identity_Number__c = legalId;
         contact.IsInMonitoringSet__c = false;
         insert contact;
-
+        
+        mock.buildMockServer();
         Test.setMock(HttpCalloutMock.class, mock.mockServer);
         Test.startTest();
         AddContactToValitiveMonitioringSetBatch batch = new AddContactToValitiveMonitioringSetBatch();
